set up page and complete header

--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Margin and Padding exercise 2</title>
+        <title>Landing Page</title>
         <link rel="stylesheet" href="style.css" />
     </head>
 
     <body>
-        
+        <div id="main-container">
+            <div class="header">
+                <span class="header-logo">Header Logo</span>
+                <ul class="header-links">
+                    <li><a href="#">header link 1</a></li>
+                    <li><a href="#">header link 2</a></li>
+                    <li><a href="#">header link 3</a></li>
+                </ul>
+            </div>
+            <div class="intro"></div>
+            <div class="information"></div>
+            <div class="quote"></div>
+            <div class="signup"></div>
+            <div class="footer">Copyright © The Odin Project 2021</div>
+        </div>
     </body>
 </html>
