Complete quote portion

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <title>Landing Page</title>
         <link rel="stylesheet" href="style.css" />
     </head>
-
     <body>
         <div id="main-container">
             <div class="header">
@@ -18,9 +17,52 @@
                     <li><a href="#">header link 3</a></li>
                 </ul>
             </div>
-            <div class="intro"></div>
-            <div class="information"></div>
-            <div class="quote"></div>
+            <div class="intro">
+                <div class="text-signup">
+                    <h1>This website is awesome</h1>
+                    <p>
+                        This website has some subtext that goes here under the
+                        main title. It's a smaller font and the color is lower
+                        contrast.
+                    </p>
+                    <button>Sign up</button>
+                </div>
+                <div class="image-placeholder">
+                    This is a placeholder for an image
+                </div>
+            </div>
+            <div class="information">
+                <h1 class="info-header">Some Random Information</h1>
+                <div class="box-container">
+                    <div class="box-item-container">
+                        <div class="box"></div>
+                        <p class="box-caption">
+                            this is some subtext under an illustration or image
+                        </p>
+                    </div>
+                    <div class="box-item-container">
+                        <div class="box"></div>
+                        <p class="box-caption">
+                            this is some subtext under an illustration or image
+                        </p>
+                    </div>
+                    <div class="box-item-container">
+                        <div class="box"></div>
+                        <p class="box-caption">
+                            this is some subtext under an illustration or image
+                        </p>
+                    </div>
+                    <div class="box-item-container">
+                        <div class="box"></div>
+                        <p class="box-caption">
+                            this is some subtext under an illustration or image
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="quote">
+                <p class="quote-content">This is an inspiring quote or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. <span class="thor">-Thor, God of Thunder</span> </p>
+            </div>
             <div class="signup"></div>
             <div class="footer">Copyright © The Odin Project 2021</div>
         </div>
