--- a/index.html
+++ b/index.html
@@ -63,7 +63,15 @@
             <div class="quote">
                 <p class="quote-content">This is an inspiring quote or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. <span class="thor">-Thor, God of Thunder</span> </p>
             </div>
-            <div class="signup"></div>
+            <div class="signup">
+                <div class="container">
+                    <div class="p-container">
+                        <p class="call-to-action">Call to action! It's time!</p>
+                        <p>Sign up for our product by clicking that button right over there!</p>
+                    </div>
+                    <button class="signup-button">Sign up</button>
+                </div>
+            </div>
             <div class="footer">Copyright © The Odin Project 2021</div>
         </div>
     </body>
